# near-debugging

./: .gitignore  build.sh
1-sim-tests/: Cargo.toml  run.sh
1-sim-tests/res/: unit_testing.wasm
1-sim-tests/tests/: general.rs
2-callbacks/: .env.example  .gitignore  Cargo.toml  readme.md  run.sh
2-callbacks/res/: callback_results.wasm
2-callbacks/src/: lib.rs
3-types-issues/: .gitignore  Cargo.toml  run.sh  views.sh
3-types-issues/res/: types_issues.wasm
3-types-issues/src/: lib.rs
src/: lib.rs
