[package]
name = "unit-testing"
version = "0.0.0"
authors = ["pmarangone"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", tag = "4.0.0-pre.6"}

[dev-dependencies]
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs", tag = "4.0.0-pre.6"}

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"

[workspace]
members = []
